added placeholder text to password inputs

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                     <div class="fields">
                         <div>
                             <label for="passwordOne">PASSWORD</label>
-                            <input type="password" name="passwordOne" id="passwordOne" maxlength="20" minlength="8" required>
+                            <input type="password" name="passwordOne" id="passwordOne" maxlength="20" minlength="8" placeholder="min 8 characters" required>
                         </div>
                         <div>
                             <label for="passwordTwo" class="control-label">Confirm</label>
-                            <input name="passwordTwo" type="password" class="form-control" id="passwordTwo" required>
+                            <input name="passwordTwo" type="password" class="form-control" id="passwordTwo" placeholder="min 8 characters" required>
                             <span class="label label-warning" id="error" style="display:none;">Passwords don't match</span>
                         </div>
                     </div>
